Create posts list view in home page

--- a/user_interface/templates/base.html
+++ b/user_interface/templates/base.html
@@ -11,7 +11,8 @@
 
 <body>
     <nav>
-        <a href="">LOGIN</a>
+        <a href="#">LOGIN</a>
+        <a href="/">HOME</a>
         <a href="/blogs">BLOGS</a>
     </nav>
     <header>
