--- a/posts/templates/home.html
+++ b/posts/templates/home.html
@@ -4,8 +4,9 @@
     {% for post in posts %}
         <div class="post-list-container">
             <h2>{{ post.post_title }}</h2>
-            <article>{{ post.blog }}</article>
-            <span> {{ post.blog.author }}</span>
+            <article>{{ post.post_body }}</article>
+            <h3>Blog: {{ post.blog }}</h3>
+            <span> Un blog de:  {{ post.blog.author }}</span>
         </div>
     {% endfor %}
 {% endblock %}
