--- a/user_interface/static/style.css
+++ b/user_interface/static/style.css
@@ -36,12 +36,22 @@ main {
 
 }
 
-.blog-list-container h2 {
+.post-list-container {
+    grid-column-start: 2;
+    grid-column: 2 / 5;
+}
+
+.post-list-container h3 {
+    color: var(--links-color-red);
+    font-family: 'Montserrat', sans-serif;
+}
+
+.blog-list-container h2, .post-list-container h2 {
     color: var(--main-color-salmon);
     font-family: 'Montserrat', sans-serif;
 }
 
-.blog-list-container article, span {
+.blog-list-container article, span, .post-list-container article, span {
     color: var(--font-color);
     font-family: 'Montserrat', sans-serif;
 }
