--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -7,7 +7,7 @@
             <label for="username">Username: </label>
             <input type="text" name="username" >
             <label for="password">Password: </label>
-            <input type="text" name="password">
+            <input type="password" name="password">
             <button>LOGIN</button>
         </form>
 
