Check if username already exists and if password and confirmation password match

--- a/user_interface/static/style.css
+++ b/user_interface/static/style.css
@@ -105,6 +105,11 @@ main {
     justify-self: center;
 }
 
+.errorlist li {
+    list-style-type: none;
+    color: var(--main-color-salmon);
+}
+
 footer {
     color: var(--main-color-salmon);
     text-align: center;
