--- a/user_interface/templates/base.html
+++ b/user_interface/templates/base.html
@@ -13,6 +13,7 @@
     <nav>
         {% if not user.is_authenticated %}
             <a href="{% url 'login' %}">LOGIN</a>
+            <a href="{% url 'signup' %}">SIGNUP</a>
         {% else %}
             <a href="/">HOME</a>
             <a href="/blogs">BLOGS</a>
