--- a/user_interface/static/style.css
+++ b/user_interface/static/style.css
@@ -38,7 +38,12 @@ main {
 
 }
 
-.post-list-container {
+main h2 {
+    font-family: var(--font-titles);
+    color: var(--main-color-salmon);
+}
+
+.post-list-container, .new-post {
     grid-column-start: 2;
     grid-column: 2 / 5;
 }
@@ -108,6 +113,24 @@ main {
 .errorlist li {
     list-style-type: none;
     color: var(--main-color-salmon);
+}
+
+.new-post{
+    background-color: var(--background-color-green);
+    padding: 5%;
+}
+
+.new-post p {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    font-family: var(--font-p);
+}
+
+.new-post input, textarea {
+    width: 100%;
+    border:0px solid;
+    font-size: 1rem;
+    border-bottom: 1px solid var(--secondary-color-blue);
 }
 
 footer {
