--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             {{ signup_form.as_p }}
 
-            <button>LOGIN</button>
+            <button>REGISTER</button>
         </form>
 
         {% for message in messages %}
