--- a/user_interface/templates/base.html
+++ b/user_interface/templates/base.html
@@ -15,14 +15,15 @@
             <a href="{% url 'login' %}">LOGIN</a>
             <a href="{% url 'signup' %}">SIGNUP</a>
         {% else %}
-            <a href="/">HOME</a>
-            <a href="/blogs">BLOGS</a>
             <a href="{% url 'logout' %}">LOGOUT</a>
+            <a href="{% url 'home' %}">HOME</a>
+            <a href="{% url 'blog_list' %}">BLOGS</a>
+            <a href="{% url 'user_page' username=request.user %}">{{request.user | upper}} PROFILE</a>
         {% endif %}
     </nav>
     <header>
         {% block 'main_header' %}
-            <h1>Wordplease</h1>
+            <h1><a href="{% url 'home' %}">Wordplease</a></h1>
             <p>The Bloggin Platform</p>
         {% endblock %}
     </header>
@@ -32,8 +33,13 @@
 
         {% endblock %}
     </main>
+
     <footer>
-        Wordplease. Developed by Alejandro Capparelli.
+        {% block 'main_footer' %}
+        <div>
+            Wordplease. Developed by Alejandro Capparelli.
+        </div>
+        {% endblock %}
     </footer>
 </body>
 
