--- a/blogs/templates/blogs/user_page.html
+++ b/blogs/templates/blogs/user_page.html
@@ -4,7 +4,11 @@
     {% for post in posts %}
         <div class="post-list-container">
             <h2>{{post.post_title}}</h2>
-            <article>{{post.post_body}}</article>
+            <div class="post-image-mini">
+                <img src="{{post.image}}" alt="{{post.title}} thumbnail">
+            </div>
+            <article>{{post.post_body | slice:":500" }}...</article>
+            <p><a href="/blogs/{{request.user}}/{{post.id}}">Read Full Article </a></p>
         </div>
     {% endfor %}
 {% endblock %}
