--- a/posts/templates/single_post.html
+++ b/posts/templates/single_post.html
@@ -3,6 +3,9 @@
 {% block 'main_body' %}
     <div class="post-list-container">
         <h1>{{post.post_title}}</h1>
+        <div class="post-image">
+            <img src="{{post.image}}" alt="{{post.post_title}}">
+        </div>
         <article>{{post.post_body}}</article>
     </div>
 {% endblock %}
