redirect user to create_blog template when trying to post before registering a Blog to avoid error 500

--- a/blogs/templates/blogs/create_blog.html
+++ b/blogs/templates/blogs/create_blog.html
@@ -3,7 +3,7 @@
 {% block 'main_body' %}
     <div class="new-post">
         <h2>New Blog </h2>
-        <p>Create your first blog.</p>
+        <p>Before posting, create your first blog.</p>
         <hr>
         <form method="post">
             {% csrf_token %}
